telfon format ham qo'shildi

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <header class="container">
       <nav>
+
         <div class="nav-logo">
           <img src="./img/logo.png" alt="" width="40" height="40" />
           <span>pense</span>
@@ -40,6 +41,7 @@
         <div class="request-btn-box">
           <button class="nav-request-btn">Request a demo</button>
         </div>
+
       </nav>
 
       <div class="header-bottom">
@@ -56,9 +58,11 @@
         </div>
 
         <div class="header-bottom-img">
-          <img src="./img/header-img.svg" alt="" />
+          <img src="./img/header-img.svg" alt="header img" />
         </div>
+
       </div>
+
     </header>
 
     <main>
